<resources>
    <string name="app_name">HeroesMakers</string>

    <!-- Strings related to login -->
    <string name="loading">Loading…</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="sign_in">Sign In</string>
    <string name="drawer_item_profile">My Profile</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="question_title">Question title</string>
    <string name="first_answer">First answer</string>
    <string name="second_answer">Second answer</string>
    <string name="third_answer">Third answer</string>
    <string name="fourth_answer">Fourth answer</string>

    <string name="zero_time" translatable="false">00:00</string>
    <string name="skip_to_previous">Skip to previous</string>
    <string name="skip_to_next">Skip to next</string>
    <string name="play_or_pause">Play or pause</string>

    <string name="other">Other</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="emergency_contacts">Emergency Contacts</string>

</resources>
