<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_action_favorites"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/emergency_contacts"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/settings"/>
        </menu>
    </item>

    <item
        android:id="@+id/nav_none"
        android:title=""
        android:visible="false"/>

</menu>
