<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:gravity="center"
        android:text="@string/question_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/first_answer"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_ellipse_button_light_blue"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:text="@string/first_answer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:theme="@style/AccentOverlay"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/second_answer"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_ellipse_button_light_blue"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:text="@string/second_answer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:theme="@style/AccentOverlay"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/third_answer"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/first_answer"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_ellipse_button_light_blue"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:text="@string/third_answer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:theme="@style/AccentOverlay"/>

    <TextView
        android:id="@+id/fourth_answer"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignEnd="@+id/second_answer"
        android:layout_alignTop="@+id/third_answer"
        android:background="@drawable/shape_ellipse_button_light_blue"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:text="@string/fourth_answer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:theme="@style/AccentOverlay"/>

</RelativeLayout>